<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="text_how_was_service">How was the service?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="okay_50">Okay(50%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>