<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:context=".MainActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:textColor="@color/black"
                android:hint="@string/cost_of_service"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/how_was_service"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cost_of_service"
            android:layout_marginTop="5dp"
            android:text="@string/text_how_was_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/how_was_service"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay_50" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/round_up_switch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tip_options"
            android:checked="true"
            android:text="@string/round_up_tip"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/round_up_switch"
            android:layout_marginTop="5dp"
            android:background="@drawable/calculate_button_shape"
            android:text="@string/calculate"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tip_amount"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_calculate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:text="@string/tip_amount"
            tools:text="Tip Amount: $10" />
    </RelativeLayout>

</ScrollView>